trunk/Archive2/5c/7adc0eea00195d/output
2

###################################

main.cpp:12:2: error: no matching function for call to 'f'
        f(A<1, 2>());
        ^
main.cpp:5:26: note: candidate template ignored: substitution failure [with Is = <>]: too few template arguments for class template 'A'
template<int... Is> void f(A<Is...>)
                         ^ ~
1 error generated.
